Refactor Combination class